--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,4 +18,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+
+  .btn-shadow {
+    box-shadow: 2px 2px 4px 0px #dcd9fd inset, -2px -2px 4px 0px #2a264b inset;
+  }
 }
